# newsletter

./: .env  Cargo.toml  README.md  configuration.yaml
.cargo/: config.toml
.github/workflows/: general.yml
scripts/: init_db.sh
src/: configurations.rs  main.rs
src/routes/: health_check.rs
tests/: health_check.rs
