[package]
name = "newsletter"
version = "0.1.0"
authors = ["Rishabh Mittal <connect@rishabhm.me>"]
edition = "2021"

[lib]
path = "src/lib.rs"
name = "newsletter"

[dependencies]
actix-web = "4"
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
config = "0.13.3"
serde = { version = "1.0.185", features = ["derive"] }
sqlx = { version = "0.7.1", default-features = false, features = ["runtime-tokio-rustls", "postgres", "macros", "chrono", "uuid", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.4.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.11.19"
